--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='materialize.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='app.css') }}">
-    <link rel="script" href="{{ url_for('static', filename='materialize.min.js') }}">
+    <title>{% block title %}{% endblock %} - aZaMon</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
+
 <body>
-<header>
-    <nav>
-        <div class="nav-wrapper">
-            <a href="#" class="brand-logo">Logo</a>
-            {% block navbar_right %}{% endblock %}
-        </div>
-    </nav>
-</header>
-<main class="container">
-    {% block main_body %}{% endblock %}
-</main>
-<footer class="page-footer">
-    <div class="footer-copyright">
-        <div class="container">
-            © 2022 Author(s) for this website
-        </div>
-    </div>
-</footer>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-dark">
+            <div class="container-fluid">
+                <a href="#" class="navbar-brand text-light">aZaMon</a>
+                {% block navbar_right %}{% endblock %}
+            </div>
+        </nav>
+    </header>
+    <main>
+        {% block main %}{% endblock %}
+    </main>
 </body>
+
 </html>
