--- a/flaskr/templates/signup.html
+++ b/flaskr/templates/signup.html
@@ -3,37 +3,52 @@
 {% block title %}Signup{% endblock %}
 
 {% block main %}
-<form action="">
+<form method="post">
     <div class="container">
-        <div class="row">
+        <div class="row pb-4">
             <div class="col-12">
                 <h1 class="display-4 pt-4 text-center">Signup</h1>
             </div>
         </div>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        {% for message in messages %}
+        <div class="row">
+            <div class="col"></div>
+            <div class="col-6">
+                <div class="alert alert-danger" role="alert">
+                    {{message}}
+                </div>
+            </div>
+            <div class="col"></div>
+        </div>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
         <div class="row mt-4">
             <div class="col"></div>
             <div class="col-6">
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="name">
+                    <input type="text" class="form-control" id="name" name="name">
                 </div>
                 <div class="mb-3">
                     <label for="address" class="form-label">Address</label>
-                    <input type="text" class="form-control" id="address">
+                    <input type="text" class="form-control" id="address" name="address">
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="email">
+                    <input type="email" class="form-control" id="email" name="email">
                     <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                 </div>
                 <div class="mb-3">
                     <label for="passwd" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="passwd">
+                    <input type="password" class="form-control" id="passwd" name="passwd">
                     <div id="passwordHelp" class="form-text">Must be between 5 and 20 characters</div>
                 </div>
                 <div class="mb-3">
                     <label for="confirm-passwd" class="form-label">Confirm Password</label>
-                    <input type="password" class="form-control" id="confirm-passwd">
+                    <input type="password" class="form-control" id="confirm-passwd" name="confirm-passwd">
                 </div>
             </div>
             <div class="col"></div>
@@ -42,7 +57,7 @@
             <div class="col"></div>
             <div class="col-4">
                 <div class="d-flex justify-content-center">
-                    <button class="btn btn-primary">Signup</button>
+                    <button type="submit" class="btn btn-primary">Signup</button>
                 </div>
             </div>
             <div class="col"></div>
