--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -7,8 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 
 <body>
@@ -18,6 +19,20 @@
                 <a href="#" class="navbar-brand text-light">aZaMon</a>
                 {% block navbar_right %}{% endblock %}
             </div>
+            {% with firstName = session.get('firstName') %}
+            {% if firstName %}
+            <div class="dropdown">
+                <a href="#" class="link-dark text-decoration-none dropdown-toggle pe-5" data-bs-toggle="dropdown">
+                    <i class="bi bi-person-circle text-light fs-3"></i>
+                    <div class="d-inline text-light ps-2">{{firstName}}</div>
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Profile</a></li>
+                    <li><a class="dropdown-item" href={{url_for('auth.logout')}}>Logout</a></li>
+                </ul>
+            </div>
+            {% endif %}
+            {% endwith %}
         </nav>
     </header>
     <main>
