--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -30,6 +30,7 @@
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="#">Profile</a></li>
                     <li><a class="dropdown-item" href={{url_for('auth.logout')}}>Logout</a></li>
+                    <li><a class="dropdown-item" href={{url_for('user.cart')}}>Cart</a></li>
                 </ul>
             </div>
             {% endif %}
