Added logic and entry for wishlish

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -31,6 +31,7 @@
                     <li><a class="dropdown-item" href="#">Profile</a></li>
                     <li><a class="dropdown-item" href={{url_for('auth.logout')}}>Logout</a></li>
                     <li><a class="dropdown-item" href={{url_for('user.cart')}}>Cart</a></li>
+                    <li><a class="dropdown-item" href={{url_for('user.wishlist')}}>Wishlist</a></li>
                 </ul>
             </div>
             {% endif %}
