--- a/flaskr/templates/cart.html
+++ b/flaskr/templates/cart.html
@@ -16,7 +16,7 @@
 
             if (!isNaN(currentVal)) {
                 parent.find('input[name=' + fieldName + ']').val(currentVal + 1);
-                $.post("/cart", 
+                $.post("/user/cart", 
                 {
                     type:"Q",
                     prodId:prodId,
@@ -42,7 +42,7 @@
 
             if (!isNaN(currentVal) && currentVal > 1) {
                 parent.find('input[name=' + fieldName + ']').val(currentVal - 1);
-                $.post("/cart", 
+                $.post("/user/cart", 
                 {
                     type:"Q",
                     prodId:prodId,
@@ -66,7 +66,7 @@
         $('.card-body').on('click', '.remove-cart-btn', function (e) {
             prodId = e.target.name
             sellerId = e.target.name
-            $.post("/cart", 
+            $.post("/user/cart", 
             {
                 type:"R",
                 prodId:prodId,
