--- a/flaskr/templates/wishlist.html
+++ b/flaskr/templates/wishlist.html
@@ -6,13 +6,22 @@
     $(document).ready(function () {
         $('.card-body').on('click', '.rem-wishlist-btn', function (e) {
             prodId = e.target.name
-            sellerId = e.target.name
-            $.post("/wishlist", 
+            // sellerId = e.target.name
+            $.post("/user/wishlist", 
             {
                 type:"R",
                 prodId:prodId
             },
             function(){});
+        });
+
+        $('.card-body').on('click', '.add-cart-btn', function (e) {
+            prodId = e.target.name
+            $.post("/user/wishlist",
+            {
+                type:"C",
+                prodId:prodId
+            })
         });
 
     });
@@ -23,6 +32,19 @@
     </div>
     <div class="wishlist_cont container">
         <ul style="list-style-type: none;">
+            <li class="pt-4">
+                <div class="card">
+                    <div class="card-header">
+                       product name
+                      </div>
+                      <div class="card-body">
+                        <h5 class="card-title"><s>product price</s> discounted price</h5>
+                        <p class="card-text">product description loren ipsum lara lassan</p>
+                        <a href="#" name="{{ product.prodId }}" class="add-cart-btn btn btn-primary">Add to Cart</a>
+                        <button name="{{ product.prodId }}" class="rem-wishlist-btn btn btn-primary">Remove from Wishlist</button>
+                      </div>
+                </div>
+            </li>
             {% for product in products %}
             <li class="pt-4">
                 <div class="card">
@@ -32,8 +54,8 @@
                       <div class="card-body">
                         <h5 class="card-title"><s>{{ product.price }}</s> {{ product.discount_price }}</h5>
                         <p class="card-text">{{ product.description }}</p>
-                        <a href="#" class="add-cart-btn btn btn-primary">Add to Cart</a>
-                        <a href="#" class="rem-wishlist-btn btn-primary">Remove from Wishlist</a>
+                        <a href="#" name="{{ product.prodId }}" class="add-cart-btn btn btn-primary">Add to Cart</a>
+                        <a href="#" name="{{ product.prodId }}" class="rem-wishlist-btn btn-primary">Remove from Wishlist</a>
                       </div>
                 </div>
             </li>
